Adicionando o Cabeçalho da página

--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <title>Início</title>
 </head>
 <body>
-    
+    <head>
+        <nav>
+            <a>Início</a>
+            <a>Quem Somos</a>
+            <a>Produtos</a>
+            <a>Serviços</a>
+            <a>Clientes</a>
+            <a>Parceiros</a>
+            <a>Contato</a>
+        </nav>
+    </head>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
