--- a/index.html
+++ b/index.html
@@ -19,7 +19,32 @@
             <a>Contato</a>
         </nav>
     </head>
-    <main></main>
+    <main>
+        <section>
+            <h1>A Empório Natu</h1>
+            <p>Bem vindos a sua loja de produtos naturais em Caraguatatuba!</p>
+            <p>Aqui em nosso site, você encontrará informações sobre a nossa empresa, sua história, missão, visão e valores, bem como os produtos e serviços que oferecemos de uma forma rápida e intuitiva.</p>
+            <p>A Empório Natu nasceu durante a pandemia, com o intuito de trazer mais saúde e qualidade de vida para as pessoas através de produtos naturais. Logo, em nossas prateleiras você irá encontrar uma variedade de produtos que te ajudarão a ter uma vida mais saudável e equilibrada.</p>
+            <p>Temos chás, temperos, grãos, nozes, sementes, cereais, farinhas e superalimentos. Uma seção dedicada para aqueles que procuram uma dieta específica (zero açúcar, sem glúten, sem lactose, vegetarianos/veganos), além de uma seção de cosméticos e produtos de cuidados pessoais e bem estar voltados para promover o equilíbrio e a saúde geral.</p>
+            <p>Estamos prontos e te esperando para ajudá-lo a fazer escolhas mais saudáveis para o seu dia a dia, com produtos de alta qualidade e um ambiente acolhedor para tornar a sua experiência de compra uma jornada agradável.</p>
+            <p>Visite nossa Loja e descubra um novo mundo repleto de opções parar nutrir seu corpo e mente. Esperamos recebê-lo em breve!</p>
+        </section>
+        <img src="logo.png" alt="Logotipo da Empresa Empório Natu">
+        <section>
+            <h2>Missão, Visão e Valores</h2>
+            <p>Nossa missão é proporcionar acesso fácil a alimentos e produtos naturais, promovendo uma alimentação saudável e um estilo de vida equilibrado.</p>
+            <p>Nosso objetivo é ser a principal referência em oferecer produtos naturais de alta qualidade, promovendo uma vida saudável e consciente para nossos clientes.</p>
+            <p>Nossos produtos são de alta qualidade, nutrem o corpo e beneficiam a saúde. Valorizamos a satisfação dos clientes, ajudando-os a fazerem escolhas informadas e conscientes para uma vida saudável.</p>  
+            <div>
+                <h3>Acesse nossas Redes Sociais</h3>
+                <a>Instagram</a>
+                <a>Facebook</a>
+                <a>WhatsApp</a>
+            </div>          
+        </section>
+
+
+    </main>
     <footer></footer>
 </body>
 </html>
