Adicionando conteúdo do rodapé da Página

--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
                 <a>WhatsApp</a>
             </div>          
         </section>
-
-
     </main>
-    <footer></footer>
+    <footer>
+        <p>Copyright ©️ 2023 - Site Institucional da Loja Empório Natu</p>
+        <p>Desenvolvido por @facarlos90</p>
+    </footer>
 </body>
 </html>
