Editado estilos do cabeçalho

--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <head>
-        <nav>
-            <a>Início</a>
-            <a>Quem Somos</a>
-            <a>Produtos</a>
-            <a>Serviços</a>
-            <a>Clientes</a>
-            <a>Parceiros</a>
-            <a>Contato</a>
+    <header class="cabecalho">
+        <nav class="cabecalho__menu">
+            <a class="cabecalho__menu__link">Início</a>
+            <a class="cabecalho__menu__link">Quem Somos</a>
+            <a class="cabecalho__menu__link">Produtos</a>
+            <a class="cabecalho__menu__link">Serviços</a>
+            <a class="cabecalho__menu__link">Clientes</a>
+            <a class="cabecalho__menu__link">Parceiros</a>
+            <a class="cabecalho__menu__link">Contato</a>
         </nav>
-    </head>
+    </header>
     <main>
         <section>
             <h1>A Empório Natu</h1>
