Formatando e finalizando cabeçalho e rodapé da página principal

--- a/index.html
+++ b/index.html
@@ -22,8 +22,6 @@
     <main class="apresentacao">
         <section class="apresentacao__historia">
             <h1 class="apresentacao__historia__titulo">A Empório Natu</h1>
-            <!-- <p class="apresentacao__historia__texto">Bem vindos a sua loja de produtos naturais em Caraguatatuba!</p> -->
-            <!-- <p class="apresentacao__historia__texto">Aqui em nosso site, você encontrará informações sobre a nossa empresa, sua história, missão, visão e valores, bem como os produtos e serviços que oferecemos de uma forma rápida e intuitiva.</p> -->
             <p class="apresentacao__historia__texto">A Empório Natu nasceu durante a pandemia, com o intuito de trazer mais saúde e qualidade de vida para as pessoas através de produtos naturais. </p>
             <p class="apresentacao__historia__texto">Logo, em nossas prateleiras você irá encontrar uma variedade de mercadorias que te ajudarão a ter uma vida mais saudável e equilibrada, como chás, temperos, grãos, nozes, sementes, cereais e farinhas... Uma seção dedicada para aqueles que procuram uma dieta específica (zero açúcar, sem glúten, sem lactose, vegetarianos/veganos), além de um setor de cosméticos e produtos de cuidados pessoais e bem estar, voltados para promover o equilíbrio e a saúde geral.</p>
             <p class="apresentacao__historia__texto">Estamos prontos e te esperando para ajudá-lo a fazer escolhas mais saudáveis para o seu dia a dia, com produtos de alta qualidade e um ambiente acolhedor para tornar a sua experiência de compra uma jornada agradável.</p>
@@ -43,7 +41,7 @@
             </div>          
         </section>
     </main>
-    <footer>
+    <footer class="rodape">
         <p>Copyright ©️ 2023 - Site Institucional da Loja Empório Natu</p>
         <p>Desenvolvido por @facarlos90</p>
     </footer>
