--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Início</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
     <header class="cabecalho">
@@ -27,7 +27,7 @@
             <p class="apresentacao__historia__texto">Estamos prontos e te esperando para ajudá-lo a fazer escolhas mais saudáveis para o seu dia a dia, com produtos de alta qualidade e um ambiente acolhedor para tornar a sua experiência de compra uma jornada agradável.</p>
             <p class="apresentacao__historia__texto">Visite nossa Loja e descubra um novo mundo repleto de opções parar nutrir seu corpo e mente. Esperamos recebê-lo em breve!</p>
         </section>
-        <img class="apresentacao__imagem" src="logo.png" alt="Logotipo da Empresa Empório Natu">
+        <img class="apresentacao__imagem" src="./assets/logo.png" alt="Logotipo da Empresa Empório Natu">
         <section class="apresentacao__missao">
             <h2 class="apresentacao__missao__titulo">Missão, Visão e Valores</h2>
             <p class="apresentacao__missao__texto">Nossa missão é proporcionar acesso fácil a alimentos e produtos naturais, promovendo uma alimentação saudável e um estilo de vida equilibrado.</p>
@@ -35,9 +35,9 @@
             <p class="apresentacao__missao__texto">Nossos produtos são de alta qualidade, nutrem o corpo e beneficiam a saúde. Valorizamos a satisfação dos clientes, ajudando-os a fazerem escolhas informadas e conscientes para uma vida saudável.</p>  
             <div class="apresentacao__links">
                 <h3 class="apresentacao__links__subtitulo">Acesse nossas Redes Sociais</h3>
-                <a class="apresentacao__links__navegacao" href="https://www.instagram.com/emporionatucaragua">Instagram</a>
-                <a class="apresentacao__links__navegacao" href="https://www.facebook.com/emporionatucaragua1">Facebook</a>
-                <a class="apresentacao__links__navegacao" href="https://www.whatsapp.com/catalog/5512982687192/?app_absent=0">WhatsApp</a>
+                <a class="apresentacao__links__navegacao" href="https://www.instagram.com/emporionatucaragua"><img src="./assets/instagram.png" alt="Logotipo do instagram">instagram</a>
+                <a class="apresentacao__links__navegacao" href="https://www.facebook.com/emporionatucaragua1"><img src="./assets/facebook.png" alt="Logotipo do Facebook">Facebook</a>
+                <a class="apresentacao__links__navegacao" href="https://www.whatsapp.com/catalog/5512982687192/?app_absent=0"><img src="./assets/whatsapp.png" alt="Logotipo do WhatsApp">WhatsApp</a>
             </div>          
         </section>
     </main>
