Criando página quem somos e adicionando assets

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
     <header class="cabecalho">
         <nav class="cabecalho__menu">
-            <a class="cabecalho__menu__link">Início</a>
-            <a class="cabecalho__menu__link">Quem Somos</a>
-            <a class="cabecalho__menu__link">Produtos</a>
-            <a class="cabecalho__menu__link">Serviços</a>
-            <a class="cabecalho__menu__link">Clientes</a>
-            <a class="cabecalho__menu__link">Parceiros</a>
-            <a class="cabecalho__menu__link">Contato</a>
+            <a class="cabecalho__menu__link" href="index.html">Início</a>
+            <a class="cabecalho__menu__link" href="about.html">Quem Somos</a>
+            <a class="cabecalho__menu__link" href="">Produtos</a>
+            <a class="cabecalho__menu__link" href="">Serviços</a>
+            <a class="cabecalho__menu__link" href="">Clientes</a>
+            <a class="cabecalho__menu__link" href="">Parceiros</a>
+            <a class="cabecalho__menu__link" href="">Contato</a>
         </nav>
     </header>
     <main class="apresentacao">
