Conteúdo e finalização da página Quem Somos

--- a/about.html
+++ b/about.html
@@ -19,7 +19,28 @@
             <a class="cabecalho__menu__link" href="">Contato</a>
         </nav>
     </header>
-    <main></main>
+    <main class="apresentacao">
+        <section class="apresentacao__principal">
+            <h1 class="apresentacao__principal__titulo">Quem Somos</h1>
+            <p class="apresentacao__principal__texto">Trabalhamos por anos em várias redes grandes de supermercado, ganhando uma experiência valiosa no setor de varejo de alimentos. O que nos fez perceber não só o aumento da procura por produtos naturais, como a dificuldade de encontrar tais produtos nessas grandes redes.</p>
+            <p class="apresentacao__principal__texto">Logo, unimos nossas vontades em um só lugar: ter nosso próprio negócio, um lugar onde pudéssemos compartilhar nossa filosofia de vida e trabalho, além de impactar direta e positivamente na vida das pessoas.</p>
+            <p class="apresentacao__principal__texto">Hoje, nossa loja foi carinhosa e cuidadosamente projetada para refletir nossos valores e nossa missão. Prateleiras bem organizadas exibem produtos frescos e coloridos enquanto o aroma das ervas, chás e especiarias preenchem o ar. Recebemos nossos clientes sempre com um sorriso no rosto e damos os conselhos necessários sobre os melhores produtos para suas necessidades individuais.</p>
+            <p class="apresentacao__principal__texto">Somos a Maíse e o Vinícius e nossa história até aqui prova que, com determinação, paixão e um propósito maior, é possível transformar um sonho em realidade e causar um impacto positivo e duradouro na vida das pessoas.</p>
+            <p class="apresentacao__principal__texto">Esperamos vocês aqui!</p>
+        </section>
+        <img class="apresentacao__imagem" src="./assets/quem-somos.jpg" alt="Foto dos Proprietários parados em frente à fachada da loja Empório Natu">
+        <section class="apresentacao__secundario">
+            <h2 class="apresentacao__secundario__titulo">Fique por dentro das nossas redes sociais!</h2>
+            <p class="apresentacao__secundario__texto">Seguir nossa empresa nas redes sociais permitirá que você se mantenha sempre atualizado com nossas informações, tenha acesso a promoções exclusivas, obtenha um suporte online para tirar suas dúvidas sobre produtos e valores a qualquer momento durante o expediente...
+            <p class="apresentacao__secundario__texto">Uma maneira conveniente e eficaz de se envolver com nossa marca e aproveitar ao máximo tudo aquilo que oferecemos!</p>
+            <div class="apresentacao__links">
+                <h3 class="apresentacao__links__subtitulo">Nos siga ou entre em contato agora mesmo!</h3>
+                <a class="apresentacao__links__navegacao" href="https://www.instagram.com/emporionatucaragua"><img src="./assets/instagram.png" alt="Logotipo do instagram">instagram</a>
+                <a class="apresentacao__links__navegacao" href="https://www.facebook.com/emporionatucaragua1"><img src="./assets/facebook.png" alt="Logotipo do Facebook">Facebook</a>
+                <a class="apresentacao__links__navegacao" href="https://www.whatsapp.com/catalog/5512982687192/?app_absent=0"><img src="./assets/whatsapp.png" alt="Logotipo do WhatsApp">WhatsApp</a>
+            </div>          
+        </section>
+    </main>
     <footer class="rodape">
         <p>Copyright ©️ 2023 - Site Institucional da Loja Empório Natu</p>
         <p>Desenvolvido por @facarlos90</p>
