--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
         </nav>
     </header>
     <main class="apresentacao">
-        <section class="apresentacao__historia">
-            <h1 class="apresentacao__historia__titulo">A Empório Natu</h1>
-            <p class="apresentacao__historia__texto">A Empório Natu nasceu durante a pandemia, com o intuito de trazer mais saúde e qualidade de vida para as pessoas através de produtos naturais. </p>
-            <p class="apresentacao__historia__texto">Logo, em nossas prateleiras você irá encontrar uma variedade de mercadorias que te ajudarão a ter uma vida mais saudável e equilibrada, como chás, temperos, grãos, nozes, sementes, cereais e farinhas... Uma seção dedicada para aqueles que procuram uma dieta específica (zero açúcar, sem glúten, sem lactose, vegetarianos/veganos), além de um setor de cosméticos e produtos de cuidados pessoais e bem estar, voltados para promover o equilíbrio e a saúde geral.</p>
-            <p class="apresentacao__historia__texto">Estamos prontos e te esperando para ajudá-lo a fazer escolhas mais saudáveis para o seu dia a dia, com produtos de alta qualidade e um ambiente acolhedor para tornar a sua experiência de compra uma jornada agradável.</p>
-            <p class="apresentacao__historia__texto">Visite nossa Loja e descubra um novo mundo repleto de opções parar nutrir seu corpo e mente. Esperamos recebê-lo em breve!</p>
+        <section class="apresentacao__principal">
+            <h1 class="apresentacao__principal__titulo">A Empório Natu</h1>
+            <p class="apresentacao__principal__texto">A Empório Natu nasceu durante a pandemia, com o intuito de trazer mais saúde e qualidade de vida para as pessoas através de produtos naturais. </p>
+            <p class="apresentacao__principal__texto">Logo, em nossas prateleiras você irá encontrar uma variedade de mercadorias que te ajudarão a ter uma vida mais saudável e equilibrada, como chás, temperos, grãos, nozes, sementes, cereais e farinhas... Uma seção dedicada para aqueles que procuram uma dieta específica (zero açúcar, sem glúten, sem lactose, vegetarianos/veganos), além de um setor de cosméticos e produtos de cuidados pessoais e bem estar, voltados para promover o equilíbrio e a saúde geral.</p>
+            <p class="apresentacao__principal__texto">Estamos prontos e te esperando para ajudá-lo a fazer escolhas mais saudáveis para o seu dia a dia, com produtos de alta qualidade e um ambiente acolhedor para tornar a sua experiência de compra uma jornada agradável.</p>
+            <p class="apresentacao__principal__texto">Visite nossa Loja e descubra um novo mundo repleto de opções parar nutrir seu corpo e mente. Esperamos recebê-lo em breve!</p>
         </section>
         <img class="apresentacao__imagem" src="./assets/logo.png" alt="Logotipo da Empresa Empório Natu">
-        <section class="apresentacao__missao">
-            <h2 class="apresentacao__missao__titulo">Missão, Visão e Valores</h2>
-            <p class="apresentacao__missao__texto">Nossa missão é proporcionar acesso fácil a alimentos e produtos naturais, promovendo uma alimentação saudável e um estilo de vida equilibrado.</p>
-            <p class="apresentacao__missao__texto">Nosso objetivo é ser a principal referência em oferecer produtos naturais de alta qualidade, promovendo uma vida saudável e consciente para nossos clientes.</p>
-            <p class="apresentacao__missao__texto">Nossos produtos são de alta qualidade, nutrem o corpo e beneficiam a saúde. Valorizamos a satisfação dos clientes, ajudando-os a fazerem escolhas informadas e conscientes para uma vida saudável.</p>  
+        <section class="apresentacao__secundario">
+            <h2 class="apresentacao__secundario__titulo">Missão, Visão e Valores</h2>
+            <p class="apresentacao__secundario__texto">Nossa missão é proporcionar acesso fácil a alimentos e produtos naturais, promovendo uma alimentação saudável e um estilo de vida equilibrado.</p>
+            <p class="apresentacao__secundario__texto">Nosso objetivo é ser a principal referência em oferecer produtos naturais de alta qualidade, promovendo uma vida saudável e consciente para nossos clientes.</p>
+            <p class="apresentacao__secundario__texto">Nossos produtos são de alta qualidade, nutrem o corpo e beneficiam a saúde. Valorizamos a satisfação dos clientes, ajudando-os a fazerem escolhas informadas e conscientes para uma vida saudável.</p>  
             <div class="apresentacao__links">
                 <h3 class="apresentacao__links__subtitulo">Acesse nossas Redes Sociais</h3>
                 <a class="apresentacao__links__navegacao" href="https://www.instagram.com/emporionatucaragua"><img src="./assets/instagram.png" alt="Logotipo do instagram">instagram</a>
