--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
             <p class="apresentacao__secundario__texto">Seguir nossa empresa nas redes sociais permitirá que você se mantenha sempre atualizado com nossas informações, tenha acesso a promoções exclusivas, obtenha um suporte online para tirar suas dúvidas sobre produtos e valores a qualquer momento durante o expediente...
             <p class="apresentacao__secundario__texto">Uma maneira conveniente e eficaz de se envolver com nossa marca e aproveitar ao máximo tudo aquilo que oferecemos!</p>
             <div class="apresentacao__links">
-                <h3 class="apresentacao__links__subtitulo">Nos siga ou entre em contato agora mesmo!</h3>
+                <h3 class="apresentacao__links__subtitulo">Comece a nos seguir agora mesmo!</h3>
                 <a class="apresentacao__links__navegacao" href="https://www.instagram.com/emporionatucaragua"><img src="./assets/instagram.png" alt="Logotipo do instagram">instagram</a>
                 <a class="apresentacao__links__navegacao" href="https://www.facebook.com/emporionatucaragua1"><img src="./assets/facebook.png" alt="Logotipo do Facebook">Facebook</a>
                 <a class="apresentacao__links__navegacao" href="https://www.whatsapp.com/catalog/5512982687192/?app_absent=0"><img src="./assets/whatsapp.png" alt="Logotipo do WhatsApp">WhatsApp</a>
