--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav class="cabecalho__menu">
             <a class="cabecalho__menu__link" href="index.html">Início</a>
             <a class="cabecalho__menu__link" href="about.html">Quem Somos</a>
-            <a class="cabecalho__menu__link" href="">Produtos</a>
+            <a class="cabecalho__menu__link" href="products.html">Produtos</a>
             <a class="cabecalho__menu__link" href="">Serviços</a>
             <a class="cabecalho__menu__link" href="">Clientes</a>
             <a class="cabecalho__menu__link" href="">Parceiros</a>
