--- a/products.html
+++ b/products.html
@@ -61,7 +61,7 @@
             </tr>
             <tr>
                 <td><img class="image" src="./assets/produtos/sementes-farelos.png"> </td>
-                <td>Grãos, Sementes e Farelos</td>
+                <td>Grãos, Sementes, Farelos</td>
                 <td><img class="image" src="./assets/produtos/adocantes.png"></td>
                 <td>Adoçantes</td>
             </tr>
