Adicionando página de serviços e corrigindo bugs

--- a/products.html
+++ b/products.html
@@ -14,7 +14,7 @@
             <a class="cabecalho__menu__link" href="index.html">Início</a>
             <a class="cabecalho__menu__link" href="about.html">Quem Somos</a>
             <a class="cabecalho__menu__link" href="products.html">Produtos</a>
-            <a class="cabecalho__menu__link" href="">Serviços</a>
+            <a class="cabecalho__menu__link" href="services.html">Serviços</a>
             <a class="cabecalho__menu__link" href="">Clientes</a>
             <a class="cabecalho__menu__link" href="">Parceiros</a>
             <a class="cabecalho__menu__link" href="">Contato</a>
@@ -66,6 +66,10 @@
                 <td>Adoçantes</td>
             </tr>
         </table>
+        <div class="apresentacao__links">
+            <h3 class="apresentacao__links__subtitulo">Verifique nosso catálogo online com todos os preços e produtos atualizados!!!</h3>
+            <a class="apresentacao__links__navegacao" href="https://www.whatsapp.com/catalog/5512982687192/?app_absent=0"><img src="./assets/sociais/whatsapp.png" alt="Logotipo do WhatsApp">WhatsApp</a>
+        </div>  
     </main>
     <footer class="rodape">
         <p>Copyright ©️ 2023 - Site Institucional da Loja Empório Natu</p>
