Criando página de clientes, adicionando assets e tornando-a responsiva

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
             <a class="cabecalho__menu__link" href="about.html">Quem Somos</a>
             <a class="cabecalho__menu__link" href="products.html">Produtos</a>
             <a class="cabecalho__menu__link" href="services.html">Serviços</a>
-            <a class="cabecalho__menu__link" href="">Clientes</a>
+            <a class="cabecalho__menu__link" href="customers.html">Clientes</a>
             <a class="cabecalho__menu__link" href="">Parceiros</a>
             <a class="cabecalho__menu__link" href="">Contato</a>
         </nav>
