--- a/services.html
+++ b/services.html
@@ -15,7 +15,7 @@
             <a class="cabecalho__menu__link" href="about.html">Quem Somos</a>
             <a class="cabecalho__menu__link" href="products.html">Produtos</a>
             <a class="cabecalho__menu__link" href="services.html">Serviços</a>
-            <a class="cabecalho__menu__link" href="">Clientes</a>
+            <a class="cabecalho__menu__link" href="customers.html">Clientes</a>
             <a class="cabecalho__menu__link" href="">Parceiros</a>
             <a class="cabecalho__menu__link" href="">Contato</a>
         </nav>
@@ -54,7 +54,7 @@
             </tr>
             <tr>
                 <td><img class="image" src="./assets/servicos/dinheiro.png"></td>
-                <td class="texto__tabela">Dinheiro</td>
+                <td>Dinheiro</td>
             </tr>
             <tr>
                 <td><img class="image" src="./assets/servicos/take-way.png"></td>
