Criando página dos Parceiros, colocando novos assets e tornando-a responsiva

--- a/customers.html
+++ b/customers.html
@@ -10,15 +10,15 @@
 </head>
 <body>
     <header class="cabecalho">
-        <nav class="cabecalho__menu">
-            <a class="cabecalho__menu__link" href="index.html">Início</a>
-            <a class="cabecalho__menu__link" href="about.html">Quem Somos</a>
-            <a class="cabecalho__menu__link" href="products.html">Produtos</a>
-            <a class="cabecalho__menu__link" href="services.html">Serviços</a>
-            <a class="cabecalho__menu__link" href="customers.html">Clientes</a>
-            <a class="cabecalho__menu__link" href="">Parceiros</a>
-            <a class="cabecalho__menu__link" href="">Contato</a>
-        </nav>
+            <nav class="cabecalho__menu">
+                <a class="cabecalho__menu__link" href="index.html">Início</a>
+                <a class="cabecalho__menu__link" href="about.html">Quem Somos</a>
+                <a class="cabecalho__menu__link" href="products.html">Produtos</a>
+                <a class="cabecalho__menu__link" href="services.html">Serviços</a>
+                <a class="cabecalho__menu__link" href="customers.html">Clientes</a>
+                <a class="cabecalho__menu__link" href="partners.html">Parceiros</a>
+                <a class="cabecalho__menu__link" href="">Contato</a>
+            </nav>
     </header>
     <main class="principal">
         <h1 class="principal__titulo">Clientes</h1>
