--- a/products.html
+++ b/products.html
@@ -16,54 +16,54 @@
             <a class="cabecalho__menu__link" href="products.html">Produtos</a>
             <a class="cabecalho__menu__link" href="services.html">Serviços</a>
             <a class="cabecalho__menu__link" href="customers.html">Clientes</a>
-            <a class="cabecalho__menu__link" href="">Parceiros</a>
+            <a class="cabecalho__menu__link" href="partners.html">Parceiros</a>
             <a class="cabecalho__menu__link" href="">Contato</a>
         </nav>
     </header>
     <main class="principal">
         <h1 class="principal__titulo">Conheça nossos produtos</h1>
-        <table>
+        <table class="tabela__produtos">
             <tr>
-                <td><img class="image" src="./assets/produtos/petiscos-e-cereais.png"></td>
-                <td>Petiscos e Cereais</td>
-                <td><img class="image" src="./assets/produtos/doces-saudaveis.png"></td>
-                <td class="texto__tabela">Doces Saudáveis</td>
+                <td class="tabela__produtos__linhas"><img class="image" src="./assets/produtos/petiscos-e-cereais.png"></td>
+                <td class="tabela__produtos__linhas">Petiscos e Cereais</td>
+                <td class="tabela__produtos__linhas"><img class="image" src="./assets/produtos/doces-saudaveis.png"></td>
+                <td class="tabela__produtos__linhas" class="texto__tabela">Doces Saudáveis</td>
             </tr>
             <tr>
-                <td><img class="image" src="./assets/produtos/guloseimas-fit.png"></td>
-                <td>Guloseimas Fit</td>
-                <td><img class="image" src="./assets/produtos/farinhas-especiais.png"></td>
-                <td class="texto__tabela">Farinhas Especiais</td>
+                <td class="tabela__produtos__linhas"><img class="image" src="./assets/produtos/guloseimas-fit.png"></td>
+                <td class="tabela__produtos__linhas">Guloseimas Fit</td>
+                <td class="tabela__produtos__linhas"><img class="image" src="./assets/produtos/farinhas-especiais.png"></td>
+                <td class="tabela__produtos__linhas" class="texto__tabela">Farinhas Especiais</td>
             </tr>
             <tr>
-                <td><img class="image" src="./assets/produtos/drageados.png"></td>
-                <td>Drageados</td>
-                <td><img class="image" src="./assets/produtos/bebidas.png"></td>
-                <td>Bebidas</td>
+                <td class="tabela__produtos__linhas"><img class="image" src="./assets/produtos/drageados.png"></td>
+                <td class="tabela__produtos__linhas">Drageados</td>
+                <td class="tabela__produtos__linhas"><img class="image" src="./assets/produtos/bebidas.png"></td>
+                <td class="tabela__produtos__linhas">Bebidas</td>
             </tr>
             <tr>
-                <td><img class="image" src="./assets/produtos/salgados-saudaveis.png"> </td>
-                <td>Salgados Saudáveis</td>
-                <td><img class="image" src="./assets/produtos/temperos-condimentos.png"></td>
-                <td>Temperos</td>
+                <td class="tabela__produtos__linhas"><img class="image" src="./assets/produtos/salgados-saudaveis.png"> </td>
+                <td class="tabela__produtos__linhas">Salgados Saudáveis</td>
+                <td class="tabela__produtos__linhas"><img class="image" src="./assets/produtos/temperos-condimentos.png"></td>
+                <td class="tabela__produtos__linhas">Temperos</td>
             </tr>
             <tr>
-                <td><img class="image" src="./assets/produtos/castanhas.png"> </td>
-                <td>Castanhas e Nuts</td>
-                <td><img class="image" src="./assets/produtos/preparos-rapidos.png"></td>
-                <td>Preparos Rápidos</td>
+                <td class="tabela__produtos__linhas"><img class="image" src="./assets/produtos/castanhas.png"> </td>
+                <td class="tabela__produtos__linhas">Castanhas e Nuts</td>
+                <td class="tabela__produtos__linhas"><img class="image" src="./assets/produtos/preparos-rapidos.png"></td>
+                <td class="tabela__produtos__linhas">Preparos Rápidos</td>
             </tr>
             <tr>
-                <td><img class="image" src="./assets/produtos/frutas-especiais.png"> </td>
-                <td>Frutas Especiais</td>
-                <td><img class="image" src="./assets/produtos/saude.png"></td>
-                <td>Saúde</td>
+                <td class="tabela__produtos__linhas"><img class="image" src="./assets/produtos/frutas-especiais.png"> </td>
+                <td class="tabela__produtos__linhas">Frutas Especiais</td>
+                <td class="tabela__produtos__linhas"><img class="image" src="./assets/produtos/saude.png"></td>
+                <td class="tabela__produtos__linhas">Saúde</td>
             </tr>
             <tr>
-                <td><img class="image" src="./assets/produtos/sementes-farelos.png"> </td>
-                <td>Grãos, Sementes, Farelos</td>
-                <td><img class="image" src="./assets/produtos/adocantes.png"></td>
-                <td>Adoçantes</td>
+                <td class="tabela__produtos__linhas"><img class="image" src="./assets/produtos/sementes-farelos.png"> </td>
+                <td class="tabela__produtos__linhas">Grãos, Sementes, Farelos</td>
+                <td class="tabela__produtos__linhas"><img class="image" src="./assets/produtos/adocantes.png"></td>
+                <td class="tabela__produtos__linhas">Adoçantes</td>
             </tr>
         </table>
         <div class="apresentacao__links">
