--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a class="cabecalho__menu__link" href="products.html">Produtos</a>
             <a class="cabecalho__menu__link" href="services.html">Serviços</a>
             <a class="cabecalho__menu__link" href="customers.html">Clientes</a>
-            <a class="cabecalho__menu__link" href="">Parceiros</a>
+            <a class="cabecalho__menu__link" href="partners.html">Parceiros</a>
             <a class="cabecalho__menu__link" href="">Contato</a>
         </nav>
     </header>
