--- a/partners.html
+++ b/partners.html
@@ -31,7 +31,7 @@
             <a class="cabecalho__menu__link" href="services.html">Serviços</a>
             <a class="cabecalho__menu__link" href="customers.html">Clientes</a>
             <a class="cabecalho__menu__link" href="partners.html">Parceiros</a>
-            <a class="cabecalho__menu__link" href="">Contato</a>
+            <a class="cabecalho__menu__link" href="contact.html">Contato</a>
         </nav>
     </header>
     <main>
