Finalizano Página Contatos

--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Início</title>
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/extra.css">
 </head>
 <body>
     <header class="cabecalho">
@@ -19,8 +20,37 @@
             <a class="cabecalho__menu__link" href="contact.html">Contato</a>
         </nav>
     </header>
-    <main>
+    <main class="contato">
+        <section class="contato__apresentacao">
+            <div class="contato__apresentacao__texto">
+                <h1 class="">Contato:</h1>
+                <p class="">Conheça nosso espaço físico! </p>
+                <p class="">Nossa loja está localizada no coração da cidade</p>
+                <h2>Endereço</h2>
+                <p class="">R. Sebastião Mariano Nepomuceno, 299 - </p>
+                <p>Centro, Caraguatatuba - SP, 11660-130</p>
+            </div>
+            <div class="">
+                <img class="contato__apresentacao__imagem" src="./assets/loja.jpg" alt="">
+            </div>
+        </section>
+        <section class="contato__mapa">
+            <h3 class="contato__mapa__titulo">Como Chegar</h3>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3655.5384534627146!2d-45.41376688827565!3d-23.620880263694534!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cd6365e78a738f%3A0x4b29a2eed4217550!2sEmp%C3%B3rio%20Natu%20Caragu%C3%A1!5e0!3m2!1spt-BR!2sbr!4v1685966066384!5m2!1spt-BR!2sbr" width="70%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </section>
+        <section class="contato__enderecos">
+            <h3 class="contato__titulo">Telefone para Contato</h3>
+            <p class="">(12) 98268-7192</p>
+            <h3 class="">E-mail</h3>
+            <p class="contato__email">emporionatucaragua@gmail.com</p>
 
+        </section>
+        <div class="contato__botao">
+            <h3 class="contato__titulo">Redes Sociais!!!</h3>
+            <a class="contato__links" href="https://www.whatsapp.com/catalog/5512982687192/?app_absent=0"><img src="./assets/sociais/whatsapp.png" alt="Logotipo do WhatsApp">WhatsApp</a>
+            <a class="contato__links" href="https://www.instagram.com/emporionatucaragua"><img src="./assets/sociais/instagram.png" alt="Logotipo do instagram">instagram</a>
+            <a class="contato__links" href="https://www.facebook.com/emporionatucaragua1"><img src="./assets/sociais/facebook.png" alt="Logotipo do Facebook">Facebook</a>
+        </div>   
     </main>
     <footer class="rodape">
         <p>Copyright ©️ 2023 - Site Institucional da Loja Empório Natu</p>
